--- a/templates/user_metrics.html
+++ b/templates/user_metrics.html
@@ -86,38 +86,37 @@
     </div>
   </div> -->
   
-  
   <section class="register-section spad">
     <div class="container">
         <div class="row">
             <div class="col-lg-8">
                 <div class="register-text">
                     <div class="section-title">
-                        <h2>New User Registration</h2>
+                        <h2>Daily Food Intake</h2>
                         <!-- <p>The First 7 Day Trial Is Completely Free With The Teacher</p> -->
                     </div>
                     <form action="#" class="register-form">
                         <div class="row">
-                            <div class="col-lg-6">
-                              <label for="name">Create User Name</label>
+                            <div class="col-lg-12">
+                              <label for="name">Breakfast</label>
                               <input type="text" id="username">
                             </div>
-                            <div class="col-lg-6">
-                              <label for="name">Create Password</label>
+                            <div class="col-lg-12">
+                              <label for="name">Lunch</label>
                               <input type="text" id="password">
                             </div>
-                            <div class="col-lg-6">
-                                <label for="name">First Name</label>
+                            <div class="col-lg-12">
+                                <label for="name">Dinner</label>
                                 <input type="text" id="name">
                             </div>
-                            <div class="col-lg-6">
-                                <label for="last-name">Last Name</label>
+                            <div class="col-lg-12">
+                                <label for="last-name">Snack</label>
                                 <input type="text" id="last-name">                           
                               </div>
-                            <div class="col-lg-6">
-                                <label for="name">Gender</label>
+                            <div class="col-lg-12">
+                                <label for="name">Water</label>
                                 <input type="text" id="gender">
-                            </div>
+                            </div> -->
                             <!-- <div class="col-lg-6">
                                 <label for="email">Your email address</label>
                                 <input type="text" id="email"> -->
@@ -126,7 +125,7 @@
                                 <label for="mobile">Mobile No*</label>
                                 <input type="text" id="mobile">
                             </div> -->
-                            <div class="col-lg-6">
+                            <!-- <div class="col-lg-6">
                               <label for="mobile">Date of birth</label>
                               <input type="text" id="date_of_birth">
                             </div>
@@ -141,7 +140,7 @@
                             <div class="col-lg-6">
                               <label for="mobile">Physical activity Level</label>
                               <input type="text" id="physical_activity_level">
-                            </div>
+                            </div> -->
                             <!-- <div class="col-lg-6">
                               <label for="mobile">City</label>
                               <input type="text" id="city">
@@ -179,7 +178,7 @@
                               <input type="text" id="insurance">
                             </div> -->
                                 </div>
-                                <button type="submit" class="register-btn">Get Started</button>
+                                <button type="submit" class="register-btn">Submit</button>
                     </form>
                 </div>
             </div>
