--- a/templates/Daily_vizualization.html
+++ b/templates/Daily_vizualization.html
@@ -43,8 +43,10 @@
         </div>
     </div>
   </header>
-  
-  <section class="hero-section set-bg" data-setbg="../static/images/food.jpg">
+  <section class="hero-section" data-setbg="../static/images/food.jpg">
+   
+  </section>
+  <section class="visual-section">
     <div class="row">
       <div class="col-md-2">
         <aside class="filters">
@@ -63,21 +65,21 @@
                       <select id="selectnutrients">                                         
                       </select>
                     </li>
-
                   </ul>
                 </div>
-                
               </form>
             </div>
           </div>
         </aside>
       </div>
-      <div class="col-md-10">
-        <div id ="plot">
-
-        </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div id ="plot">
+            </div>
+          </div>
+        </div>  
       </div>
-
     </div>
   </section>
  
