--- a/templates/form.html
+++ b/templates/form.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="zxx"></html>
@@ -9,73 +10,189 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-  <link rel="stylesheet" href="static/css/bootstrap.min.css" type="text/css">
-  <link rel="stylesheet" href="static/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="static/css/owl.carousel.min.css" type="text/css">
-  <link rel="stylesheet" href="static/css/magnific-popup.css" type="text/css">
-  <link rel="stylesheet" href="static/css/slicknav.min.css" type="text/css">
-  <link rel="stylesheet" href="static/css/style.css" type="text/css">
+  <link rel="stylesheet" href="../static/css/bootstrap.min.css" type="text/css">
+  <link rel="stylesheet" href="../static/css/font-awesome.min.css" type="text/css">
+  <link rel="stylesheet" href="../static/css/owl.carousel.min.css" type="text/css">
+  <link rel="stylesheet" href="../static/css/magnific-popup.css" type="text/css">
+  <link rel="stylesheet" href="../static/css/slicknav.min.css" type="text/css">
+  <link rel="stylesheet" href="../static/css/style.css" type="text/css">
   <link rel="stylesheet" href=https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/slate/bootstrap.min.css>
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> -->
   <!-- <link rel="stylesheet" href="css/style.css" type="text/css" /> -->
 </head>
-
-
-  <body>
-    <header class="header-section">
-      <div class="container">
-          <div class="logo">
-              <a href="index.html">
-                  <img src="../static/images/Nutrometer.png"></img>
-              </a>
-          </div>
-          <div class="nav-menu">
-            <nav class="mainmenu mobile-menu">
-                <ul>
-                    <li class="active"><a href="static/index.html">Home</a></li>
-                    <li><a href="static/about-us.html">About</a></li>
-                    <!-- <li><a href="./classes.html">Classes</a></li> -->
-                    <!-- <li><a href="./blog.html">Blog</a></li> -->
-                    <!-- <li><a href="./gallery.html">Gallery</a></li> -->
-                    <li><a href="static/contact.html">Contacts</a></li>
-                </ul>
-              </nav>
-            <!-- <a href="#" class="primary-btn signup-btn">Create Account</a>
-            <!-- <a href="#" class="primary-btn signup-btn">User Login</a> -->
-          </div>
-      </div>
-    </header>
+<body>
+  <header class="header-section">
     <div class="container">
-      <div class="jumbotron" style="text-align: center">
-        <h1>User Login</h1>
-        <!-- <p>Enter your details below</p> -->
-        <!-- <a href="/" class="btn btn-primary" role="button">List of All Users</a> -->
-      </div>
-      <div class="row">
-        <div class="col-md-offset-2 col-md-8">
-          <p>Enter your details below</p>
-          <form method="POST" action="/send" role="form", name="userform">
-              <div class="form-group">
-                  <label for="inputFirstname">First Name</label>
-                  <input type="text" class="form-control" id="inputFirstname" name="userFirstname" placeholder="">
-              </div>
-              <div class="form-group">
-                  <label for="inputLastname">Pet Location Lat</label>
-                  <input type="text" class="form-control" id="inputLastname" name="userLastname" placeholder="">
-              </div>
-              <div class="form-group">
-                  <label for="inputemail">Email Address</label>
-                  <input type="text" class="form-control" id="inputemail" name="useremail" placeholder="">
-              </div>
-              <div class="form-group">
-                <label for="inputmobile">Mobile Number</label>
-                <input type="number" class="form-control" id="inputmobile" name="usermobilenumber" placeholder="">
-            </div>
-           <input type="submit" value="submit" class="btn btn-primary">
-          </form>
+        <div class="logo">
+            <a href="index.html">
+                <img src="../static/images/Nutrometer.png"></img>
+            </a>
         </div>
+        <div class="nav-menu">
+          <nav class="mainmenu mobile-menu">
+              <ul>
+                  <li class="active"><a href="./index.html">Home</a></li>
+                  <li><a href="./about-us.html">About</a></li>
+                  <!-- <li><a href="./classes.html">Classes</a></li> -->
+                  <!-- <li><a href="./blog.html">Blog</a></li> -->
+                  <!-- <li><a href="./gallery.html">Gallery</a></li> -->
+                  <li><a href="./contact.html">Contacts</a></li>
+              </ul>
+            </nav>
+          <!-- <a href="#" class="primary-btn signup-btn">Create Account</a>
+          <!-- <a href="#" class="primary-btn signup-btn">User Login</a> -->
+        </div>
+    </div>
+  </header>
+  
+  <!-- <section class="hero-section set-bg" data-setbg="food.jpg">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+              <div class="hero-image">
+                <div class="hero-text">
+                    <span>FITNESS ELEMENTS</span> -->
+                    <!-- <h1>BMI CALCULATOR</h1>
+                    <p>Gutim comes packed with the user-friendly BMI Calculator<br /> shortcode which lets</p>
+                    <a href="#" class="primary-btn">Read More</a> -->
+                <!-- </div>
+              </div>
+            </div>
+        </div>
+    </div>
+  </section> --> 
+  <!-- </header> -->
+</div>
+<!-- Header End -->
+
+  <!-- <div id="menu">
+    <h1>Tracking</h1>
+    <ul>
+      <li><a href="http://www.free-css.com/">Meals</a></li>
+      <li><a href="http://www.free-css.com/">Monthly View</a></li>
+      <li><a href="http://www.free-css.com/">Weekly View</a></li>
+      <li><a href="http://www.free-css.com/">Menu Planning</a></li>
+      <li><a href="http://www.free-css.com/">Recomendations</a></li>
+      <li><a href="http://www.free-css.com/">CSS Reference</a></li>
+    </ul>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="thumbnail">
+        <!-- <img src="Nutrometer.png" alt="..." class="img-thumbnail"> -->
+        <!-- </div>
       </div>
     </div>
-  </body>
-
+  </div> -->
+  
+  <section class="register-section spad">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8">
+                <div class="register-text">
+                    <div class="section-title">
+                        <h2>Login</h2>
+                        <!-- <p>The First 7 Day Trial Is Completely Free With The Teacher</p> -->
+                    </div>
+                    <form action="#" class="register-form">
+                        <div class="row">
+                            <div class="col-lg-6">
+                              <label for="name">Create User Name</label>
+                              <input type="text" id="username">
+                            </div>
+                            <div class="col-lg-6">
+                              <label for="name">Create Password</label>
+                              <input type="text" id="password">
+                            </div>
+                            <!-- <div class="col-lg-6">
+                                <label for="name">First Name</label>
+                                <input type="text" id="name">
+                            </div>
+                            <div class="col-lg-6">
+                                <label for="last-name">Last Name</label>
+                                <input type="text" id="last-name">                           
+                              </div>
+                            <div class="col-lg-6">
+                                <label for="name">Gender</label>
+                                <input type="text" id="gender">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                                <label for="email">Your email address</label>
+                                <input type="text" id="email"> -->
+                            <!-- </div> -->
+                            <!-- <div class="col-lg-6">
+                                <label for="mobile">Mobile No*</label>
+                                <input type="text" id="mobile">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">Date of birth</label>
+                              <input type="text" id="date_of_birth">
+                            </div>
+                            <div class="col-lg-6">
+                              <label for="mobile">Height</label>
+                              <input type="text" id="height">
+                            </div>
+                            <div class="col-lg-6">
+                              <label for="mobile">Weight</label>
+                              <input type="text" id="weight">
+                            </div>
+                            <div class="col-lg-6">
+                              <label for="mobile">Physical activity Level</label>
+                              <input type="text" id="physical_activity_level">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">City</label>
+                              <input type="text" id="city">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">State</label>
+                              <input type="text" id="state">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">Country</label>
+                              <input type="text" id="country">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">Address</label>
+                              <input type="text" id="address">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">Phone Number</label>
+                              <input type="text" id="phone_number">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">email</label>
+                              <input type="text" id="email">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">Occupation</label>
+                              <input type="text" id="occupation">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">Education</label>
+                              <input type="text" id="education">
+                            </div> -->
+                            <!-- <div class="col-lg-6">
+                              <label for="mobile">Insurance</label>
+                              <input type="text" id="insurance">
+                            </div> -->
+                                </div>
+                                <button type="submit" class="register-btn">Login</button>
+                    </form>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <!-- <div class="register-pic">
+                    <img src="img/register-pic.jpg" alt="">
+                </div> -->
+            </div>
+        </div>
+    </div>
+</section><div class="row">
+    <div class="col-md-12">
+    <!-- <img class="Nutrometer" src="Nutrometer.png"> -->
+    </div>
+  </div>
+</body>
 </html>
