--- a/templates/index.html
+++ b/templates/index.html
@@ -10,12 +10,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-  <link rel="stylesheet" href="static/css/bootstrap.min.css" type="text/css">
-  <link rel="stylesheet" href="static/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="static/css/owl.carousel.min.css" type="text/css">
-  <link rel="stylesheet" href="static/css/magnific-popup.css" type="text/css">
-  <link rel="stylesheet" href="static/css/slicknav.min.css" type="text/css">
-  <link rel="stylesheet" href="static/css/style.css" type="text/css">
+  <link rel="stylesheet" href="../static/css/bootstrap.min.css" type="text/css">
+  <link rel="stylesheet" href="../static/css/font-awesome.min.css" type="text/css">
+  <link rel="stylesheet" href="../static/css/owl.carousel.min.css" type="text/css">
+  <link rel="stylesheet" href="../static/css/magnific-popup.css" type="text/css">
+  <link rel="stylesheet" href="../static/css/slicknav.min.css" type="text/css">
+  <link rel="stylesheet" href="../static/css/style.css" type="text/css">
   <link rel="stylesheet" href=https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/slate/bootstrap.min.css>
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> -->
   <!-- <link rel="stylesheet" href="css/style.css" type="text/css" /> -->
@@ -24,8 +24,8 @@
   <header class="header-section">
     <div class="container">
         <div class="logo">
-            <a href="templates/index.html">
-                <img src="static/images/Nutrometer.png"></img>
+            <a href="index.html">
+                <img src="../static/images/Nutrometer.png"></img>
             </a>
         </div>
         <div class="nav-menu">
@@ -39,13 +39,13 @@
                   <li><a href="./contact.html">Contacts</a></li>
               </ul>
             </nav>
-          <a href="static/New_user.html" class="primary-btn signup-btn">Create Account</a>
-          <a href="static/form.html" class="primary-btn signup-btn">User Login</a>
+          <a href="./New_user.html" class="primary-btn signup-btn">Create Account</a>
+          <a href="./Login.html" class="primary-btn signup-btn">User Login</a>
         </div>
     </div>
   </header>
   
-  <section class="hero-section set-bg" data-setbg="images/food.jpg">
+  <section class="hero-section set-bg" data-setbg="./static/images/food.jpg">
     <div class="container">
         <div class="row">
             <div class="col-md-8">
