--- a/templates/nutritional_metrics.html
+++ b/templates/nutritional_metrics.html
@@ -23,22 +23,22 @@
   <header class="header-section">
     <div class="container">
         <div class="logo">
-            <a href="../templates/index.html">
+            <a href="index.html">
                 <img src="../static/images/Nutrometer.png"></img>
             </a>
         </div>
         <div class="nav-menu">
           <nav class="mainmenu mobile-menu">
               <ul>
-                  <li class="active"><a href="../templates/index.html">Home</a></li>
-                  <li><a href="../templates/about-us.html">About</a></li>
+                  <li class="active"><a href="./index.html">Home</a></li>
+                  <li><a href="./about-us.html">About</a></li>
                   <!-- <li><a href="./classes.html">Classes</a></li> -->
                   <!-- <li><a href="./blog.html">Blog</a></li> -->
                   <!-- <li><a href="./gallery.html">Gallery</a></li> -->
-                  <li><a href="../templates/contact.html">Contacts</a></li>
+                  <li><a href="./contact.html">Contacts</a></li>
               </ul>
             </nav>
-          <a href="../templates/user_metrics.html" class="primary-btn signup-btn">Enter Food Intake</a>
+          <a href="./user_metrics.html" class="primary-btn signup-btn">Enter Food Intake</a>
           <!-- <a href="./Login.html" class="primary-btn signup-btn">User Login</a> -->
         </div>
     </div>
