--- a/templates/New_user.html
+++ b/templates/New_user.html
@@ -24,19 +24,19 @@
   <header class="header-section">
     <div class="container">
         <div class="logo">
-            <a href="../templates/index.html">
+            <a href="index.html">
                 <img src="../static/images/Nutrometer.png"></img>
             </a>
         </div>
         <div class="nav-menu">
           <nav class="mainmenu mobile-menu">
               <ul>
-                  <li class="active"><a href="../templates/index.html">Home</a></li>
-                  <li><a href="../templates/about-us.html">About</a></li>
+                  <li class="active"><a href="./index.html">Home</a></li>
+                  <li><a href="./about-us.html">About</a></li>
                   <!-- <li><a href="./classes.html">Classes</a></li> -->
                   <!-- <li><a href="./blog.html">Blog</a></li> -->
                   <!-- <li><a href="./gallery.html">Gallery</a></li> -->
-                  <li><a href="../templates/contact.html">Contacts</a></li>
+                  <li><a href="./contact.html">Contacts</a></li>
               </ul>
             </nav>
           <!-- <a href="#" class="primary-btn signup-btn">Create Account</a>
