--- a/templates/user_metrics.html
+++ b/templates/user_metrics.html
@@ -24,19 +24,19 @@
   <header class="header-section">
     <div class="container">
         <div class="logo">
-            <a href="../templates/index.html">
+            <a href="index.html">
                 <img src="../static/images/Nutrometer.png"></img>
             </a>
         </div>
         <div class="nav-menu">
           <nav class="mainmenu mobile-menu">
               <ul>
-                  <li class="active"><a href="../templates/index.html">Home</a></li>
-                  <li><a href="../templates/about-us.html">About</a></li>
+                  <li class="active"><a href="./index.html">Home</a></li>
+                  <li><a href="./about-us.html">About</a></li>
                   <!-- <li><a href="./classes.html">Classes</a></li> -->
                   <!-- <li><a href="./blog.html">Blog</a></li> -->
                   <!-- <li><a href="./gallery.html">Gallery</a></li> -->
-                  <li><a href="../templates/contact.html">Contacts</a></li>
+                  <li><a href="./contact.html">Contacts</a></li>
               </ul>
             </nav>
           <!-- <a href="#" class="primary-btn signup-btn">Create Account</a>
@@ -97,26 +97,42 @@
                     </div>
                     <form action="#" class="register-form">
                         <div class="row">
-                            <div class="col-lg-12">
+                            <div class="col-lg-8">
                               <label for="name">Breakfast</label>
                               <input type="text" id="username">
                             </div>
-                            <div class="col-lg-12">
+                            <div class="col-lg-4">
+                              <label for="name">Servings</label>
+                              <input type="text" id="username">
+                            </div>
+                            <div class="col-lg-8">
                               <label for="name">Lunch</label>
                               <input type="text" id="password">
                             </div>
-                            <div class="col-lg-12">
+                            <div class="col-lg-4">
+                              <label for="name">Servings</label>
+                              <input type="text" id="username">
+                            </div>
+                            <div class="col-lg-8">
                                 <label for="name">Dinner</label>
                                 <input type="text" id="name">
                             </div>
-                            <div class="col-lg-12">
+                            <div class="col-lg-4">
+                              <label for="name">Servings</label>
+                              <input type="text" id="username">
+                            </div>
+                            <div class="col-lg-8">
                                 <label for="last-name">Snack</label>
                                 <input type="text" id="last-name">                           
                               </div>
-                            <div class="col-lg-12">
+                              <div class="col-lg-4">
+                                <label for="name">Servings</label>
+                                <input type="text" id="username">
+                              </div>
+                            <!-- <div class="col-lg-12">
                                 <label for="name">Water</label>
                                 <input type="text" id="gender">
-                            </div> -->
+                            </div> --> -->
                             <!-- <div class="col-lg-6">
                                 <label for="email">Your email address</label>
                                 <input type="text" id="email"> -->
