--- a/templates/user_metrics.html
+++ b/templates/user_metrics.html
@@ -38,10 +38,13 @@
                   <!-- <li><a href="./gallery.html">Gallery</a></li> -->
                   <li><a href="./contact.html">Contacts</a></li>
               </ul>
+              <div>Logged in as: {{last_name}}, {{first_name}}({{username}})</div>
             </nav>
           <!-- <a href="#" class="primary-btn signup-btn">Create Account</a>
-          <!-- <a href="#" class="primary-btn signup-btn">User Login</a> -->
+          <a href="#" class="primary-btn signup-btn">User Login</a> -->
+         
         </div>
+        
     </div>
   </header>
   
@@ -62,7 +65,7 @@
     </div>
   </section> --> 
   <!-- </header> -->
-</div>
+<!-- </div> -->
 <!-- Header End -->
 
   <!-- <div id="menu">
@@ -80,7 +83,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="thumbnail">
-        <!-- <img src="Nutrometer.png" alt="..." class="img-thumbnail"> -->
+         <img src="Nutrometer.png" alt="..." class="img-thumbnail"> -->
         <!-- </div>
       </div>
     </div>
