--- a/templates/Login.html
+++ b/templates/Login.html
@@ -95,15 +95,18 @@
                         <h2>Login</h2>
                         <!-- <p>The First 7 Day Trial Is Completely Free With The Teacher</p> -->
                     </div>
-                    <form action="#" class="register-form">
+                    <form action="/login" class="register-form" method="POST">
+                        <div class="row">
+                          <div class="col-lg-12"><H4 style="color:#ff0000">{{msg}}</H4></div>
+                        </div>
                         <div class="row">
                             <div class="col-lg-6">
                               <label for="name">User Name</label>
-                              <input type="text" id="username">
+                              <input type="text" id="username" name="username">
                             </div>
                             <div class="col-lg-6">
                               <label for="name">Password</label>
-                              <input type="text" id="password">
+                              <input type="text" id="password" name="password">
                             </div>
                             <!-- <div class="col-lg-6">
                                 <label for="name">First Name</label>
