--- a/templates/Login.html
+++ b/templates/Login.html
@@ -40,7 +40,7 @@
               </ul>
             </nav>
           <!-- <a href="#" class="primary-btn signup-btn">Create Account</a>
-          <!-- <a href="#" class="primary-btn signup-btn">User Login</a> -->
+          <a href="#" class="primary-btn signup-btn">User Login</a> -->
         </div>
     </div>
   </header>
@@ -80,7 +80,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="thumbnail">
-        <!-- <img src="Nutrometer.png" alt="..." class="img-thumbnail"> -->
+       <img src="Nutrometer.png" alt="..." class="img-thumbnail"> -->
         <!-- </div>
       </div>
     </div>
@@ -93,7 +93,6 @@
                 <div class="register-text">
                     <div class="section-title">
                         <h2>Login</h2>
-                        <!-- <p>The First 7 Day Trial Is Completely Free With The Teacher</p> -->
                     </div>
                     <form action="/login" class="register-form" method="POST">
                         <div class="row">
@@ -106,82 +105,11 @@
                             </div>
                             <div class="col-lg-6">
                               <label for="name">Password</label>
-                              <input type="text" id="password" name="password">
+                              <input  id="password" name="password" type="password">
                             </div>
-                            <!-- <div class="col-lg-6">
-                                <label for="name">First Name</label>
-                                <input type="text" id="name">
-                            </div>
-                            <div class="col-lg-6">
-                                <label for="last-name">Last Name</label>
-                                <input type="text" id="last-name">                           
-                              </div>
-                            <div class="col-lg-6">
-                                <label for="name">Gender</label>
-                                <input type="text" id="gender">
-                            </div> -->
-                            <!-- <div class="col-lg-6">
-                                <label for="email">Your email address</label>
-                                <input type="text" id="email"> -->
-                            <!-- </div> -->
-                            <!-- <div class="col-lg-6">
-                                <label for="mobile">Mobile No*</label>
-                                <input type="text" id="mobile">
-                            </div> -->
-                            <!-- <div class="col-lg-6">
-                              <label for="mobile">Date of birth</label>
-                              <input type="text" id="date_of_birth">
-                            </div>
-                            <div class="col-lg-6">
-                              <label for="mobile">Height</label>
-                              <input type="text" id="height">
-                            </div>
-                            <div class="col-lg-6">
-                              <label for="mobile">Weight</label>
-                              <input type="text" id="weight">
-                            </div>
-                            <div class="col-lg-6">
-                              <label for="mobile">Physical activity Level</label>
-                              <input type="text" id="physical_activity_level">
-                            </div> -->
-                            <!-- <div class="col-lg-6">
-                              <label for="mobile">City</label>
-                              <input type="text" id="city">
-                            </div> -->
-                            <!-- <div class="col-lg-6">
-                              <label for="mobile">State</label>
-                              <input type="text" id="state">
-                            </div> -->
-                            <!-- <div class="col-lg-6">
-                              <label for="mobile">Country</label>
-                              <input type="text" id="country">
-                            </div> -->
-                            <!-- <div class="col-lg-6">
-                              <label for="mobile">Address</label>
-                              <input type="text" id="address">
-                            </div> -->
-                            <!-- <div class="col-lg-6">
-                              <label for="mobile">Phone Number</label>
-                              <input type="text" id="phone_number">
-                            </div> -->
-                            <!-- <div class="col-lg-6">
-                              <label for="mobile">email</label>
-                              <input type="text" id="email">
-                            </div> -->
-                            <!-- <div class="col-lg-6">
-                              <label for="mobile">Occupation</label>
-                              <input type="text" id="occupation">
-                            </div> -->
-                            <!-- <div class="col-lg-6">
-                              <label for="mobile">Education</label>
-                              <input type="text" id="education">
-                            </div> -->
-                            <!-- <div class="col-lg-6">
-                              <label for="mobile">Insurance</label>
-                              <input type="text" id="insurance">
-                            </div> -->
-                                </div>
-                                <button type="submit" class="register-btn">Login</button>
+                            
+                          </div>
+                        <button type="submit" class="register-btn">Login</button>
                     </form>
                 </div>
             </div>
