--- a/templates/Daily_vizualization.html
+++ b/templates/Daily_vizualization.html
@@ -1,48 +1,10 @@
-<!DOCTYPE html>
 
-<html lang="zxx"></html>
-<head>
-  <title>Nutrometer</title>
-  <meta charset="UTF-8">
-  <!-- <meta name="description" content="Gutim Template"> -->
-  <!-- <meta name="keywords" content="Gutim, unica, creative, html"> -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-  <link rel="stylesheet" href="../static/css/bootstrap.min.css" type="text/css">
-  <link rel="stylesheet" href="../static/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="../static/css/owl.carousel.min.css" type="text/css">
-  <link rel="stylesheet" href="../static/css/magnific-popup.css" type="text/css">
-  <link rel="stylesheet" href="../static/css/slicknav.min.css" type="text/css">
-  <link rel="stylesheet" href="../static/css/style.css" type="text/css">
-  <link rel="stylesheet" href=https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/slate/bootstrap.min.css>
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> -->
-  <!-- <link rel="stylesheet" href="css/style.css" type="text/css" /> -->
-</head>
-<body>
-  <header class="header-section">
-    <div class="container">
-        <div class="logo">
-            <a href="index.html">
-                <img src="../static/images/Nutrometer.png"></img>
-            </a>
-        </div>
-        <div class="nav-menu">
-          <nav class="mainmenu mobile-menu">
-              <ul>
-                  <li class="active"><a href="./index.html">Home</a></li>
-                  <li><a href="./about-us.html">About</a></li>
-                  <!-- <li><a href="./classes.html">Classes</a></li> -->
-                  <!-- <li><a href="./blog.html">Blog</a></li> -->
-                  <!-- <li><a href="./gallery.html">Gallery</a></li> -->
-                  <li><a href="./contact.html">Contacts</a></li>
-              </ul>
-            </nav>
-          <a href="./user_metrics.html" class="primary-btn signup-btn">Enter Food Intake</a>
-          <!-- <a href="./Login.html" class="primary-btn signup-btn">User Login</a> -->
-        </div>
-    </div>
-  </header>
+{% extends "layout.html" %}
+{% block pagetitle %}Nutrometer{% endblock %}
+{% block bodycontent %}
+
+
+
   <section class="hero-section" data-setbg="../static/images/food.jpg">
    
   </section>
@@ -92,5 +54,12 @@
   <script src="../static/JS/userdata.js" ></script>
   <script src="../static/JS/plot.js" ></script>
   <script src="../static/JS/vizualization.js" ></script>
-</body>
-</html>
+
+
+
+
+  
+
+
+  {% endblock %}
+
