--- a/templates/user_metrics.html
+++ b/templates/user_metrics.html
@@ -132,83 +132,16 @@
                                 <label for="name">Servings</label>
                                 <input type="text" id="username">
                               </div>
-                            <!-- <div class="col-lg-12">
-                                <label for="name">Water</label>
-                                <input type="text" id="gender">
-                            </div> --> -->
-                            <!-- <div class="col-lg-6">
-                                <label for="email">Your email address</label>
-                                <input type="text" id="email"> -->
-                            <!-- </div> -->
-                            <!-- <div class="col-lg-6">
-                                <label for="mobile">Mobile No*</label>
-                                <input type="text" id="mobile">
-                            </div> -->
-                            <!-- <div class="col-lg-6">
-                              <label for="mobile">Date of birth</label>
-                              <input type="text" id="date_of_birth">
-                            </div>
-                            <div class="col-lg-6">
-                              <label for="mobile">Height</label>
-                              <input type="text" id="height">
-                            </div>
-                            <div class="col-lg-6">
-                              <label for="mobile">Weight</label>
-                              <input type="text" id="weight">
-                            </div>
-                            <div class="col-lg-6">
-                              <label for="mobile">Physical activity Level</label>
-                              <input type="text" id="physical_activity_level">
-                            </div> -->
-                            <!-- <div class="col-lg-6">
-                              <label for="mobile">City</label>
-                              <input type="text" id="city">
-                            </div> -->
-                            <!-- <div class="col-lg-6">
-                              <label for="mobile">State</label>
-                              <input type="text" id="state">
-                            </div> -->
-                            <!-- <div class="col-lg-6">
-                              <label for="mobile">Country</label>
-                              <input type="text" id="country">
-                            </div> -->
-                            <!-- <div class="col-lg-6">
-                              <label for="mobile">Address</label>
-                              <input type="text" id="address">
-                            </div> -->
-                            <!-- <div class="col-lg-6">
-                              <label for="mobile">Phone Number</label>
-                              <input type="text" id="phone_number">
-                            </div> -->
-                            <!-- <div class="col-lg-6">
-                              <label for="mobile">email</label>
-                              <input type="text" id="email">
-                            </div> -->
-                            <!-- <div class="col-lg-6">
-                              <label for="mobile">Occupation</label>
-                              <input type="text" id="occupation">
-                            </div> -->
-                            <!-- <div class="col-lg-6">
-                              <label for="mobile">Education</label>
-                              <input type="text" id="education">
-                            </div> -->
-                            <!-- <div class="col-lg-6">
-                              <label for="mobile">Insurance</label>
-                              <input type="text" id="insurance">
-                            </div> -->
+                           
                                 </div>
                                 <button type="submit" class="register-btn">Submit</button>
                     </form>
                 </div>
-            </div>
-            <div class="col-lg-4">
-                <!-- <div class="register-pic">
-                    <img src="img/register-pic.jpg" alt="">
-                </div> -->
-            </div>
+            </div>            
         </div>
     </div>
-</section><div class="row">
+</section>
+<div class="row">
     <div class="col-md-12">
     <!-- <img class="Nutrometer" src="Nutrometer.png"> -->
     </div>
