--- a/templates/Daily_vizualization.html
+++ b/templates/Daily_vizualization.html
@@ -36,7 +36,7 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col">
             <div id ="plot">
             </div>
           </div>
